# haskgpt

./: CHANGELOG.md  LICENSE  README.md  haskgpt.cabal
src/: ChatGpt.hs  Main.hs
