name:                haskgpt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/alfiejfs/haskgpt#readme
license:             BSD3
license-file:        LICENSE
author:              Alfie-Joe Smith
maintainer:          alfie@alfiesmith.net
copyright:           2022 Alfie-Joe Smith
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable haskgpt
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ChatGpt
  default-language:    Haskell2010
  build-depends:       http-client-tls >= 0.3.6.1, 
                       http-client >= 0.7.13.1, 
                       http-types >= 0.12.3,
                       utf8-string >= 1.0.2,
                       case-insensitive >= 1.2.0.11,
                       bytestring >= 0.11.3.1,
                       text >= 1.2.5.0,
                       aeson >= 2.0.3.0,
                       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints